--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,17 +2,10 @@
   <div class="container">
      <div class="navbar-left" role="search">
        <ul class="breadcrumb" style="background-color:#fbfbfb;border-radius:0;margin-bottom:0;margin-top:6px;">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+        <li><a href="/" onclick="window.location.reload();"><i class="fa fa-dashboard"></i> Home</a></li>
         <li class="active">Dashboard</li>
       </ul>
      </div>
-      <div class="navbar-form navbar-right" role="search">
-
-        <a href="#" class="btn btn-social-icon btn-sm btn-facebook" style="border-radius:15px;"><i class="fa fa-facebook"></i></a>
-        <a href="#" class="btn btn-social-icon btn-sm btn-instagram" style="border-radius:15px;"><i class="fa fa-instagram"></i></a>
-        
-        <a href="#" class="btn btn-social-icon btn-sm btn-danger klout"  ></a>
-      </div>
      
   </div>
 
@@ -33,6 +26,20 @@
 	      </span>
 	      	                                   
 	      </div>
+	      <!-- <div class="form-group">
+	      	<label>
+	      	<input type="checkbox" value="facebook" />  Facebook 
+	      </label>
+	      	<label>
+	      	<input type="checkbox" value="facebook" />  Facebook 
+	      </label>
+	      <label>
+	      	<input type="checkbox" value="instagram" />  Instagram 
+	      </label>
+	      <label>
+	      	<input type="checkbox" value="twitter" />  Twitter 
+	      </label>
+	      </div> -->
 			<div class="bootstrap-tagsinput" >
 				<ul id="selection"></ul>
 			</div>
