--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -5,9 +5,7 @@
 		  <%= link_to "Log in", new_session_path(resource_name) %><br />
 		<% end -%>
 
-		<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-		  Don't have an account! <%= link_to "Sign up", new_registration_path(resource_name) %><br />
-		<% end -%>
+		
 
 		
 
@@ -18,11 +16,27 @@
 		<%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
 		  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
 		<% end -%>
-
+         
 		<%- if devise_mapping.omniauthable? %>
 		  <%- resource_class.omniauth_providers.each do |provider| %>
-		    <%= link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider) %><br />
-		  <% end -%>
+		     <% 
+		        providername = provider.to_s.titleize
+		        providertitle = provider.to_s
+                 if provider.to_s == 'google_oauth2'
+                 	providername = 'Google'
+                 	providertitle = 'google'
+                 end
+		      %>
+           
+		    <%= link_to omniauth_authorize_path(resource_name, provider),class: "btn btn-social-icon 
+		    btn-md  btn-#{providertitle}"  do %> 
+		     <i class='fa fa-<%= "#{providertitle}" %>'></i> 
+		     <!--<%= "Sign in with #{providername}" %> -->
+		   <% end %>
+          <% end -%>
+          <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+		  Don't have an account! <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+		<% end -%> 
 		<% end -%>
       </div>
     </div>
